2003-03-18  Jody Goldberg <jody@gnome.org>
	For Alex Duggan <aldug@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=106799
	* dialog-about.c (dialog_about) : set the icon.

2003-03-13  Jody Goldberg <jody@gnome.org>

	* dialog-autocorrect.c (cb_autocorrect_key_press) : delete.
	(dialog_init) : keyed_dialog handles the Escape now.

	* dialog-about.c : remove unnecessary include

2003-03-05  Morten Welinder  <terra@diku.dk>

	* dialog-stf-preview.c (stf_preview_render): Don't barf on lack of
	data.

	* dialog-stf-main-page.c (main_page_trim_menu_deactivate): Handle
	unselected trim type.

	* dialog-stf.glade: Fix path to icon.  This needs a better fix.
	(And dialog-stf-export.glade does the same.)

2003-01-28  Morten Welinder  <terra@diku.dk>

	* dialog-cell-sort.c (col_row_name): Don't refer to rendered text
	because that is not what is meant.  Use value_get_as_string.

2003-01-28  Jody Goldberg <jody@gnome.org>

	* Release 1.1.16

2002-12-10  Wayne Schuller  <k_wayne@linuxpower.org>

	* dialog-printer-setup.c: (scaling_type_changed, do_setup_page,
	do_fetch_page): Adjust to take into account x and y scale
	attributes. Implement the 'fit-to' widgets.

	* print.glade: Add a few accelerators.

2003-01-14  Christian Neumair  <chris@gnome-de.org>

	* advanced-filter.glade, autocorrect.glade, histogram.glade,
	plugin-manager.glade, search-replace.glade, search.glade,
	workbook-attr.glade: Removed mnemonics from tabs as HIG suggests.

2003-01-10  Morten Welinder  <terra@diku.dk>

	* dialog-workbook-attr.c (attr_dialog_init_view_page): buffer size
	paranoia.
	* dialog-cell-format.c (fillin_negative_samples): Ditto.

2003-01-04  Jon K Hellan  <hellan@acm.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=84791

	* dialog-stf-export-sheet-page.c
	(stf_export_dialog_sheet_page_init): When only one sheet in
	workbook, put it in export clist right away.

	* dialog-stf-export.c (stf_export_dialog): Skip sheet page when
	only one sheet in workbook. Fixes 
