@@ -1,3 +1,8 @@
+2003-04-02  Jukka Pekka  <jiivonen.hutcs.cs.hut.fi>
+
+	* dialog-shuffle.c, shuffle.glade: UI for data shuffling tool.
+	dialogs.h, Makefile.am: Releated changes.
+
 2003-03-18  Jody Goldberg <jody@gnome.org>
 	For Alex Duggan <aldug@gnome.org>
 
